// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionMasterDetailSummary> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-masterdetailsummary xui-composition-is-finite"
>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-summary"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionMasterDetailSummary> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-masterdetailsummary xui-composition-is-finite"
>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-summary"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionMasterDetailSummary> should include layout restriction class for medium, if specified 1`] = `
<div
  className="xui-composition xui-composition-masterdetailsummary xui-composition-is-finite xui-composition-masterdetailsummary-retain-medium"
>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-summary"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionMasterDetailSummary> should include layout restriction class for small, if specified 1`] = `
<div
  className="xui-composition xui-composition-masterdetailsummary xui-composition-is-finite xui-composition-masterdetailsummary-retain-small"
>
  <div
    className="xui-gridarea-master"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-detail"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-summary"
  >
    <div />
  </div>
</div>
`;
